--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "css-loader": "^5.2.4",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.5.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
